--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 @import "../src/styles/variables.css";
 @import "../src/styles/global.css";
 
-#root {
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -44,4 +44,4 @@
 .read-the-docs {
   color: #888;
 }
-
+ */
