--- a/src/styles/card.module.css
+++ b/src/styles/card.module.css
@@ -1,4 +1,4 @@
-/* @keyframes cardEnter {
+@keyframes cardEnter {
     0% {
         opacity: 0;
         transform: scale(1);
@@ -23,18 +23,25 @@
         animation: cardEnter 0.5s forwards;
     }
 
-    .profile-card__image {
+    .profile-card_image {
         width: 100%;
         padding-top: 100%;
         border-radius: 50%;
         margin: 0 auto;
         position: relative;
         overflow: hidden;
+        img{
+            position: absolute;
+            top: 0;
+            left: 0;
+            object-fit: cover;
+            width: 100%;
+        }
     }
-    .profile-card__content{
+    .profile-card_content{
         p {
             margin: 0;
             color: var(--text-color);
         }
     }
-} */
+}
