--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -1,4 +1,4 @@
-.profile-card {
+/* .profile-card {
     background-color: var(--primary-background-color);
     border-radius: var(--border-radius);
     padding: 1rem;
@@ -31,4 +31,4 @@
       margin: 0;
       color: var(--text-color);
     }
-  }
+  } */
