--- a/src/styles/profileForm.module.css
+++ b/src/styles/profileForm.module.css
@@ -1,5 +1,5 @@
 /* lab06 */
-/* .profile-form {
+ .profile-form {
     max-width: 700px;
     margin:0 auto;
     display:flex;
@@ -74,4 +74,4 @@
     .profile-form{
       padding: 20px;
     }
-  } */
+  }
