--- a/src/styles/profileForm.module.css
+++ b/src/styles/profileForm.module.css
@@ -1,4 +1,3 @@
-/* lab06 */
  .profile-form {
     max-width: 700px;
     margin:0 auto;
@@ -21,6 +20,7 @@
       &:disabled{
         background-color: var(--button-hover-background-color);
         color: var(--button-hover-text-color);
+        cursor: not-allowed;
       }
     }
     input[type="text"],
